Continue writing about webextensions

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -49,3 +49,21 @@
   note = {accessed 2018-10-29},
 }
 
+@book{gof,
+  title={Design Patterns: Elements of Reusable Object-Oriented Software},
+  author={Johnson, R. and Gamma, E. and Vlissides, J. and Helm, R.},
+  isbn={9780201633610},
+  series={Addison-Wesley professional computing series},
+  url={https://books.google.ch/books?id=r8M3vQEACAAJ},
+  year={2005},
+  publisher={Addison-Wesley}
+}
+
+@Misc{mozilla-trustworthy,
+  author =    {Mike Conca},
+  title =     {Firefox, Chrome and the Future of Trustworthy Extensions},
+  howpublished = {\url{https://blog.mozilla.org/addons/2018/10/26/firefox-chrome-and-the-future-of-trustworthy-extensions/}},
+  year =      {2018},
+  note =      {accessed 2018-10-26},
+}
+
