Add meeting notes

--- a/meetings/2018-11-06.md
+++ b/meetings/2018-11-06.md
@@ -1,7 +1,7 @@
 # Zeit und Personen
 
 - Woche 8
-- 2018-11-05, 15:15 bis XX:XX
+- 2018-11-05, 15:15 bis 16:20
 - Stefan Keller und Florian Bruhin
 
 # Last/Blockers/Next
@@ -20,3 +20,7 @@
   - Projektplanung
 
 # Notizen
+
+- Nächster Schritt: Projektplanung
+- Entscheid: objreg-Refactoring rausschmeisssen
+- Projektplan: Wochenweise in LaTeX
