--- a/doc/main.tex
+++ b/doc/main.tex
@@ -121,6 +121,7 @@ layer over the two libraries, implementing the adapter pattern
 
 % Problemstellung, Vision
 \section{Vision}
+\label{vision}
 
 \fixme{further define power users}
 
@@ -135,6 +136,7 @@ developers to maintain their plugins independently from the core development.
 
 % Ziele und Unterziele
 \section{Goals}
+\label{goals}
 
 Initially, qutebrowser was developed without knowledge of proper software
 engineering practices, which resulted in some maintainability issues. While many
@@ -342,16 +344,54 @@ should be noted that the WebExtension API is closely tied to the JavaScript
 language, so architecture decisions taken there will not necessarily be
 applicable to qutebrowser's Python plugin API.
 
+\subsection{Anatomy of a WebExtension}
+\label{anatomy}
+
+As explained in Mozilla's
+documentation\footnote{\url{https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/Anatomy_of_a_WebExtension},
+  accessed 2018-11-08},
+a WebExtension consists of various files:
+
+\begin{itemize}
+  \item A \verb|manifest.json| manifest file, which lists meta information about
+    an extension, such as its name, its author, or the permissions it requests.
+  \item Background scripts, which are used to implement long-running operations.
+    An extension's background scripts are loaded for the entire lifetime of an
+    extension, i.e., until it is disabled or uninstalled.
+  \item Content scripts, which are injected into loaded web pages, and can
+    interact with their content (access and manipulate the DOM). They also have
+    some additional permissions scripts supplied by the page don't have, such as
+    messaging with an extension's background scripts.
+  \item HTML pages for user interfaces such as an extension's option page or sidebar.
+  \item Other resources such as icons.
+\end{itemize}
+
+Those files are then packaged into a specially named ZIP file (XPI in case of
+Firefox; CRX for Chromium) and distributed via an extension store (a special
+website run by Mozilla/Google).
+
+For qutebrowser extensions, a simpler approach will be taken: Extensions can
+consist of a single standalone \verb|.py| file which implements the necessary
+functionality. This mechanism is inspired by the plugin handling of the pytest
+project\footnote{\url{https://docs.pytest.org/en/latest/writing_plugins.html},
+  accessed 2018-11-08}. In the future, this makes it trivial for users to add
+their own plugins to qutebrowser. It's also a very straightforward solution and
+appropriate for the initial goal of refactoring qutebrowser's core code into
+extensions.
+
+Due to extensions being written in Python, the above separation between content
+and background scripts also doesn't fully apply to qutebrowser's API. The Python
+plugins can be seen as a background script. It initially won't be able to
+interact with web pages, as this functionality isn't needed before third-party
+extensions are enabled. See the API analysis below for further details.
+
 \subsection{Analysis of the WebExtension API}
 
 The WebExtensions API is separated into various modules, each of which is
-briefly analyzed in the context of qutebrowser in this section. The indented
-descriptions are copied verbatim from Mozilla's API
-documentation\footnote{\url{https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API}, accessed 2018-11-02}.
-
-\fixme{Sort properly}
-
-\fixme{DOM access? Content vs. background script?}
+briefly analyzed in the context of qutebrowser in this section, sorted
+alphabetically. The indented descriptions are copied verbatim from Mozilla's API
+documentation\footnote{\url{https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API},
+  \\ accessed 2018-11-02}.
 
 \subsubsection{alarms}
 \begin{quote}
@@ -776,32 +816,82 @@ callback-based API.
 % Teil II SW-Projektdokumentation ("klassisches" RUP 2/HSR)  
 \part{Project Documentation}
 
+\chapter{Introduction}
+This part of the documentation describes project requirements, use cases, and
+potential end users of the project. Refer to section \ref{vision} for the vision
+behind this project.
 
-% Vision (ev. auf Kapitel 1.1 verweisen)
-\chapter{Vision}
-
+%\chapter{Vision}
+%See chapter \ref{vision}.
 
 % Anforderungsspezifikation
 \chapter{Requirements Specification}
+\fixme{???}
 
 % Anforderung an die Arbeit
-\section{Requirements of the Project}
+\section{Project Requirements}
+\fixme{How is this different from \ref{goals}?}
+
+As described in section \ref{goals}, the main goal of this project is adding a
+well designed API for extensions to qutebrowser, and at the same time improving
+its overall software architecture. The latter is achieved by moving parts of
+qutebrowser's code into ``extensions'' which are shipped with qutebrowser, and
+introducing tools such as the MyPy type checker.
 
 % Use Cases (Success Scenario / Success Diagram)
 \section{Use Cases}
+\fixme{Would an use case diagram make sense?}
+
+This project extends an existing codebase with an extension API rather
+than starting a new project from scratch. By its nature, it's difficult to
+predict how an extension API will be used in the future. Because of that, an
+use-case diagram would not adequately describe the motivation for the extension
+API.
+
+Various ideas for future third-party extensions have been voiced by the
+qutebrowser community; they are collected in a GitHub
+issue\footnote{\url{https://github.com/qutebrowser/qutebrowser/issues/30},
+  accessed 2018-11-08}. However, the main aim of this project (and thus the main
+focus for the extension API) is reducing the complexity of qutebrowser's core.
 
 % System-Sequenzdiagramme
 \section{System Sequence Diagrams}
+\fixme{TODO}
+
+Rough idea: Plugin -> Proxy -> Tab API; link to chapters about proxy and tab API.
 
 % Weitere Funktionen, die nicht erfasst wurden
-\section{Further Functionality}
+%\section{Further Functionality}
 
 % Nicht-funktionale Anforderungen (Rahmbenbedingungen, evtl. Verweis auf 1.3)
 \section{Non-functional Requirements}
+The following non-functional requirements are relevant for qutebrowser's
+extension API:
+
+\begin{description}
+  \item[Security] The security model used for qutebrowser extensions assumes
+    that extensions are trusted, i.e., may run arbitrary code. See
+    section \ref{security} for a more detailed explanation.
+  \item[Simplicity] It should be trivial for an user to extend her qutebrowser
+    setup with a custom extension. Thus, getting started with writing a
+    third-party extension should be as straightforward as possible, without
+    requiring packing multiple files into a custom format. Also see section
+    \ref{anatomy} for an explanation on how this topic is handled for
+    WebExtensions, and how qutebrowser's API differs from that.
+  \item[Learnability] When the plugin API is opened for third-party
+    contributions, it should be easy to get accustomed to it. Therefore, the API
+    should be intuitive for Python programmers, and well documented.
+  \item[Compability] The qutebrowser project runs on a variety of different
+    software versions -- various operating systems (Linux, macOS, Windows,
+    and more) are supported, including different Qt and Python versions. The
+    plugin API should abstract over those differences, so a plugin written for
+    qutebrowser (or core code moved into such a plugin) runs in all situations
+    qutebrowser itself can run.
+\end{description}
 
 % Detailspezifikation
 \section{Detailed Specification}
-
+\fixme{???}
 
 % Analyse (Business Model)
 \chapter{Analysis}
