Add initial glossary

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -1089,6 +1089,19 @@ The following risks have been identified in this project:
 
 
 \chapter{Glossary and Abbreviations}
+\begin{description}
+  \item[API]{\fixme{}}
+  \item[plugin]{\fixme{}}
+  \item[extension]{\fixme{}}
+  \item[W3C]{\fixme{}}
+  \item[DOM]{Document Object Model \fixme{}}
+  \item[Qt]{\fixme{}}
+  \item[QtWebKit]{\fixme{}}
+  \item[QtWebEngine]{\fixme{}}
+  \item[backend]{\fixme{}}
+  \item[SA]{\fixme{}}
+  \item[CI]{\fixme{}}
+\end{description}
 
 \nocite{yapproach}
 \renewcommand{\bibname}{\chapter{Literature and Sources}}
